--- a/index.html
+++ b/index.html
@@ -118,7 +118,55 @@
             </section>
             <!-- section -3 end -->
 
-            <!-- section -3 start -->
+            <!-- section -4 start -->
+            <section class="shafe-sec">
+                <h1>OURS EXPARTS</h1>
+                <p>Helps food suppliers and retailers work more efficiently by providing expert services, innovation and unique digital
+                solutions. Created in 2006, based in Madrid and working with retailers and supplier in the five continents</p>
+                <!-- main div sec start  -->
+                <div class="main-shafe-div">
+                    <!-- shape card 1 start -->
+                    <div class="shafe-1">
+                        <div>
+                            <img src="images/shapes/shafe2.jpeg" alt="shafe">
+                        </div>
+                        <div>
+                            <h1>David Milar</h1>
+                            <h4>Expart in Chef de cuisine.</h4>
+                        </div>
+                    </div>
+                    <!-- shape card 1 end -->
+
+                    <!-- shape card 2 start -->
+                    <div class="shafe-2">
+                        <div>
+                            <img src="images/shapes/shafe.jpeg" alt="shafe">
+                        </div>
+                        <div>
+                            <h1>Bayazid Howlader</h1>
+                            <h4>Expart in Sous-chef.</h4>
+                        </div>
+                    </div>
+                    <!-- shape card 2 end -->
+
+                    <!-- shape card 3 start -->
+                    <div class="shafe-3">
+                        <div>
+                            <img src="images/shapes/female.jpeg" alt="shafe">
+                        </div>
+                        <div>
+                            <h1>Arina Grande</h1>
+                            <h4>Expart in Chef de partie.</h4>
+                        </div>
+                    </div>
+                    <!-- shape card 3 end -->
+
+                </div>
+                <!-- main div sec start  -->
+            </section>
+            <!-- section -4 start -->
+
+            <!-- section -5 start -->
             <section class="sec-folower">
                 <div class="folower-main">
                     <div class="card-folower">
@@ -135,7 +183,7 @@
                     </div>
                 </div>
             </section>
-            <!-- section -3 end -->
+            <!-- section -5 end -->
 
         </main>
         <!-- main section end -->
